Cole: adding comments

--- a/image-enhancement/dehaze.ipynb
+++ b/image-enhancement/dehaze.ipynb
@@ -6,89 +6,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Bronte Sihan Li, 2023"
+    "# Bronte Sihan Li, Cole Crescas, Karan Shah\n",
+    "# 2023-09-23\n",
+    "# CS 7180"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[31mERROR: Could not find a version that satisfies the requirement pytorch==1.10.2 (from versions: 0.1.2, 1.0.2)\u001b[0m\u001b[31m\n",
-      "\u001b[0m\u001b[31mERROR: No matching distribution found for pytorch==1.10.2\u001b[0m\u001b[31m\n",
-      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n",
-      "Collecting opencv-python==4.5.5.62\n",
-      "  Downloading opencv_python-4.5.5.62-cp36-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (60.4 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m60.4/60.4 MB\u001b[0m \u001b[31m19.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: tqdm in /usr/local/lib/python3.9/dist-packages (from -r Dehaze/requirements.txt (line 2)) (4.64.1)\n",
-      "Collecting pytorch-msssim\n",
-      "  Downloading pytorch_msssim-1.0.0-py3-none-any.whl (7.7 kB)\n",
-      "Collecting timm\n",
-      "  Downloading timm-0.9.7-py3-none-any.whl (2.2 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.2/2.2 MB\u001b[0m \u001b[31m117.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: tensorboard in /usr/local/lib/python3.9/dist-packages (from -r Dehaze/requirements.txt (line 5)) (2.9.1)\n",
-      "Collecting tensorboardx\n",
-      "  Downloading tensorboardX-2.6.2.2-py2.py3-none-any.whl (101 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m101.7/101.7 kB\u001b[0m \u001b[31m29.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: numpy>=1.17.3 in /usr/local/lib/python3.9/dist-packages (from opencv-python==4.5.5.62->-r Dehaze/requirements.txt (line 1)) (1.23.4)\n",
-      "Requirement already satisfied: torch in /usr/local/lib/python3.9/dist-packages (from pytorch-msssim->-r Dehaze/requirements.txt (line 3)) (1.12.1+cu116)\n",
-      "Collecting safetensors\n",
-      "  Downloading safetensors-0.3.3-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (1.3 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.3/1.3 MB\u001b[0m \u001b[31m104.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: torchvision in /usr/local/lib/python3.9/dist-packages (from timm->-r Dehaze/requirements.txt (line 4)) (0.13.1+cu116)\n",
-      "Requirement already satisfied: pyyaml in /usr/local/lib/python3.9/dist-packages (from timm->-r Dehaze/requirements.txt (line 4)) (5.4.1)\n",
-      "Requirement already satisfied: huggingface-hub in /usr/local/lib/python3.9/dist-packages (from timm->-r Dehaze/requirements.txt (line 4)) (0.12.0)\n",
-      "Requirement already satisfied: tensorboard-data-server<0.7.0,>=0.6.0 in /usr/local/lib/python3.9/dist-packages (from tensorboard->-r Dehaze/requirements.txt (line 5)) (0.6.1)\n",
-      "Requirement already satisfied: tensorboard-plugin-wit>=1.6.0 in /usr/local/lib/python3.9/dist-packages (from tensorboard->-r Dehaze/requirements.txt (line 5)) (1.8.1)\n",
-      "Requirement already satisfied: grpcio>=1.24.3 in /usr/local/lib/python3.9/dist-packages (from tensorboard->-r Dehaze/requirements.txt (line 5)) (1.51.1)\n",
-      "Requirement already satisfied: setuptools>=41.0.0 in /usr/local/lib/python3.9/dist-packages (from tensorboard->-r Dehaze/requirements.txt (line 5)) (66.1.1)\n",
-      "Requirement already satisfied: absl-py>=0.4 in /usr/local/lib/python3.9/dist-packages (from tensorboard->-r Dehaze/requirements.txt (line 5)) (1.4.0)\n",
-      "Requirement already satisfied: wheel>=0.26 in /usr/local/lib/python3.9/dist-packages (from tensorboard->-r Dehaze/requirements.txt (line 5)) (0.35.1)\n",
-      "Requirement already satisfied: google-auth<3,>=1.6.3 in /usr/local/lib/python3.9/dist-packages (from tensorboard->-r Dehaze/requirements.txt (line 5)) (2.16.0)\n",
-      "Requirement already satisfied: requests<3,>=2.21.0 in /usr/local/lib/python3.9/dist-packages (from tensorboard->-r Dehaze/requirements.txt (line 5)) (2.28.2)\n",
-      "Requirement already satisfied: protobuf<3.20,>=3.9.2 in /usr/local/lib/python3.9/dist-packages (from tensorboard->-r Dehaze/requirements.txt (line 5)) (3.19.6)\n",
-      "Requirement already satisfied: werkzeug>=1.0.1 in /usr/local/lib/python3.9/dist-packages (from tensorboard->-r Dehaze/requirements.txt (line 5)) (2.2.2)\n",
-      "Requirement already satisfied: google-auth-oauthlib<0.5,>=0.4.1 in /usr/local/lib/python3.9/dist-packages (from tensorboard->-r Dehaze/requirements.txt (line 5)) (0.4.6)\n",
-      "Requirement already satisfied: markdown>=2.6.8 in /usr/local/lib/python3.9/dist-packages (from tensorboard->-r Dehaze/requirements.txt (line 5)) (3.4.1)\n",
-      "Requirement already satisfied: packaging in /usr/local/lib/python3.9/dist-packages (from tensorboardx->-r Dehaze/requirements.txt (line 6)) (23.0)\n",
-      "Collecting tensorboardx\n",
-      "  Downloading tensorboardX-2.6.1-py2.py3-none-any.whl (101 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m101.6/101.6 kB\u001b[0m \u001b[31m30.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25h  Downloading tensorboardX-2.6-py2.py3-none-any.whl (114 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m114.5/114.5 kB\u001b[0m \u001b[31m1.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: cachetools<6.0,>=2.0.0 in /usr/local/lib/python3.9/dist-packages (from google-auth<3,>=1.6.3->tensorboard->-r Dehaze/requirements.txt (line 5)) (5.3.0)\n",
-      "Requirement already satisfied: six>=1.9.0 in /usr/lib/python3/dist-packages (from google-auth<3,>=1.6.3->tensorboard->-r Dehaze/requirements.txt (line 5)) (1.14.0)\n",
-      "Requirement already satisfied: rsa<5,>=3.1.4 in /usr/local/lib/python3.9/dist-packages (from google-auth<3,>=1.6.3->tensorboard->-r Dehaze/requirements.txt (line 5)) (4.7.2)\n",
-      "Requirement already satisfied: pyasn1-modules>=0.2.1 in /usr/local/lib/python3.9/dist-packages (from google-auth<3,>=1.6.3->tensorboard->-r Dehaze/requirements.txt (line 5)) (0.2.8)\n",
-      "Requirement already satisfied: requests-oauthlib>=0.7.0 in /usr/local/lib/python3.9/dist-packages (from google-auth-oauthlib<0.5,>=0.4.1->tensorboard->-r Dehaze/requirements.txt (line 5)) (1.3.1)\n",
-      "Requirement already satisfied: importlib-metadata>=4.4 in /usr/local/lib/python3.9/dist-packages (from markdown>=2.6.8->tensorboard->-r Dehaze/requirements.txt (line 5)) (6.0.0)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /usr/lib/python3/dist-packages (from requests<3,>=2.21.0->tensorboard->-r Dehaze/requirements.txt (line 5)) (2.8)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.9/dist-packages (from requests<3,>=2.21.0->tensorboard->-r Dehaze/requirements.txt (line 5)) (2.1.1)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.9/dist-packages (from requests<3,>=2.21.0->tensorboard->-r Dehaze/requirements.txt (line 5)) (1.26.14)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /usr/lib/python3/dist-packages (from requests<3,>=2.21.0->tensorboard->-r Dehaze/requirements.txt (line 5)) (2019.11.28)\n",
-      "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.9/dist-packages (from torch->pytorch-msssim->-r Dehaze/requirements.txt (line 3)) (4.4.0)\n",
-      "Requirement already satisfied: MarkupSafe>=2.1.1 in /usr/local/lib/python3.9/dist-packages (from werkzeug>=1.0.1->tensorboard->-r Dehaze/requirements.txt (line 5)) (2.1.2)\n",
-      "Requirement already satisfied: filelock in /usr/local/lib/python3.9/dist-packages (from huggingface-hub->timm->-r Dehaze/requirements.txt (line 4)) (3.9.0)\n",
-      "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in /usr/local/lib/python3.9/dist-packages (from torchvision->timm->-r Dehaze/requirements.txt (line 4)) (9.2.0)\n",
-      "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.9/dist-packages (from importlib-metadata>=4.4->markdown>=2.6.8->tensorboard->-r Dehaze/requirements.txt (line 5)) (3.11.0)\n",
-      "Requirement already satisfied: pyasn1<0.5.0,>=0.4.6 in /usr/local/lib/python3.9/dist-packages (from pyasn1-modules>=0.2.1->google-auth<3,>=1.6.3->tensorboard->-r Dehaze/requirements.txt (line 5)) (0.4.8)\n",
-      "Requirement already satisfied: oauthlib>=3.0.0 in /usr/local/lib/python3.9/dist-packages (from requests-oauthlib>=0.7.0->google-auth-oauthlib<0.5,>=0.4.1->tensorboard->-r Dehaze/requirements.txt (line 5)) (3.2.2)\n",
-      "Installing collected packages: safetensors, tensorboardx, opencv-python, pytorch-msssim, timm\n",
-      "  Attempting uninstall: opencv-python\n",
-      "    Found existing installation: opencv-python 4.6.0.66\n",
-      "    Uninstalling opencv-python-4.6.0.66:\n",
-      "      Successfully uninstalled opencv-python-4.6.0.66\n",
-      "Successfully installed opencv-python-4.5.5.62 pytorch-msssim-1.0.0 safetensors-0.3.3 tensorboardx-2.6 timm-0.9.7\n",
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
-     ]
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
     }
-   ],
+   },
+   "outputs": [],
    "source": [
+    "#Please run these prior to starting\n",
     "%pip install pytorch==1.10.2 torchvision torchaudio cudatoolkit==11.3\n",
     "%pip install -r Dehaze/requirements.txt\n",
     "%pip install image_dehazer"
@@ -100,6 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#path to our data\n",
     "DATASET_DIR = 'data/a2i2/'\n",
     "IMAGE_DIR = DATASET_DIR + 'UAV-train/paired_dehaze/images/'"
    ]
@@ -223,6 +157,7 @@
     "        img = Image.open(IMAGE_DIR + filename)\n",
     "        input_img, target_img = split_paired_image(img)\n",
     "        # Randomly assign to train or validation set\n",
+    "\t\t#This may need a seed value to achieve repeated results\n",
     "        if random.random() < 0.8:\n",
     "            input_img.save(train_dir + 'hazy/' + filename)\n",
     "            target_img.save(train_dir + 'GT/' + filename)\n",
@@ -259,6 +194,7 @@
     "val_dataset = PairLoader(data_dir=val_dir, sub_dir='', mode='valid')\n",
     "val_loader = DataLoader(val_dataset, batch_size=32, shuffle=False,)\n",
     "\n",
+    "#Adjusting format to fit our dataset\n",
     "# The dataset format is {'source': img, 'target': img, 'filename': img_name}\n",
     "# Explore the dataset\n",
     "for batch in train_loader:\n",
@@ -280,6 +216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#These functions are similar to train_test_dehazeformer.py\n",
     "def train(train_loader, network, criterion, optimizer, scaler):\n",
     "\tlosses = AverageMeter()\n",
     "\n",
@@ -355,6 +292,7 @@
     "from torch.cuda.amp import autocast, GradScaler\n",
     "import json\n",
     "\n",
+    "#Some models are trained on outdoor/real world data vs syntehtic images.  Since we are using a real world dataset, we would like to test on that\n",
     "settings = json.load(open('Dehaze/configs/outdoor/dehazeformer-s.json', 'r'))\n",
     "\n",
     "# We pick DehazeFormer_s as the first model to train\n",
@@ -1115,16 +1053,18 @@
     }
    ],
    "source": [
-    "\n",
+    "#Finetuning steps to use our dataset.  We test unfreezing the 5th layer and 4th & 5th layers to compare results for 30 epochs\n",
     "# Freeze all of the parameters except the last layer or 2\n",
     "for param in model.parameters():\n",
     "    param.requires_grad = False\n",
+    "#Unfreeze the fourth layer\n",
     "for param in model.module.layer4.parameters():\n",
     "    param.requires_grad = True\n",
+    "#Unfreeze the fifth layer\n",
     "for param in model.module.layer5.parameters():\n",
     "    param.requires_grad = True\n",
     "\n",
-    "\n",
+    "#Check for GPU, else run on CPU\n",
     "device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
     "model.to(device)\n"
    ]
@@ -1591,6 +1531,7 @@
     "os.makedirs(log_dir, exist_ok=True)\n",
     "writer = SummaryWriter(log_dir=log_dir)\n",
     "\n",
+    "#Start training with 30 epochs and create variable to save the best_psnr.  In addition, there are logs generated to read from\n",
     "best_psnr = 0\n",
     "print(f'Start training for {settings[\"epochs\"]} epochs (eval every {settings[\"eval_freq\"]} epochs')\n",
     "for epoch in tqdm(range(settings['epochs'] + 1)):\n",
@@ -1748,6 +1689,7 @@
    "source": [
     "from Dehaze.models import *\n",
     "# See the output of some examples\n",
+    "#Load our finetuned model and test\n",
     "result_dir = 'results/finetune/dehazeformer-s/'\n",
     "os.makedirs(result_dir, exist_ok=True)\n",
     "\n",
@@ -1771,19 +1713,19 @@
      "text": [
       "Collecting image_dehazer\n",
       "  Downloading image_dehazer-0.0.9.tar.gz (6.2 kB)\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hRequirement already satisfied: numpy in /usr/local/lib/python3.9/dist-packages (from image_dehazer) (1.23.4)\n",
+      "  Preparing metadata (setup.py) ... \u001B[?25ldone\n",
+      "\u001B[?25hRequirement already satisfied: numpy in /usr/local/lib/python3.9/dist-packages (from image_dehazer) (1.23.4)\n",
       "Requirement already satisfied: opencv-python in /usr/local/lib/python3.9/dist-packages (from image_dehazer) (4.6.0.66)\n",
       "Requirement already satisfied: scipy in /usr/local/lib/python3.9/dist-packages (from image_dehazer) (1.9.2)\n",
       "Building wheels for collected packages: image_dehazer\n",
-      "  Building wheel for image_dehazer (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for image_dehazer: filename=image_dehazer-0.0.9-py3-none-any.whl size=6393 sha256=4bdb7bff8fbf14d88e84a32404ca8541c8cb2297f3a0e1d87cb5f3cfb2009344\n",
+      "  Building wheel for image_dehazer (setup.py) ... \u001B[?25ldone\n",
+      "\u001B[?25h  Created wheel for image_dehazer: filename=image_dehazer-0.0.9-py3-none-any.whl size=6393 sha256=4bdb7bff8fbf14d88e84a32404ca8541c8cb2297f3a0e1d87cb5f3cfb2009344\n",
       "  Stored in directory: /root/.cache/pip/wheels/0a/74/3e/d3dca52ce4583b51c1575f2fac26dc10356a0fbbe285332cd4\n",
       "Successfully built image_dehazer\n",
       "Installing collected packages: image_dehazer\n",
       "Successfully installed image_dehazer-0.0.9\n",
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
+      "\u001B[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001B[0m\u001B[33m\n",
+      "\u001B[0mNote: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
