Add names and README

--- a/shadow-removal/train_gtsrb_resnet.ipynb
+++ b/shadow-removal/train_gtsrb_resnet.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Bronte Sihan Li, 2023"
+    "# (Bronte) Sihan Li, Cole Crescas 2023"
    ]
   },
   {
